--- a/index.html
+++ b/index.html
@@ -2,11 +2,108 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
+    <link rel="stylesheet" href="" type="text/css">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+  <!-- -- -- HEADER -- -- -->
+  	<header class="main-header">
+  	  <h1 class="visually-hidden">Седона</h1>
+  		<nav class="main-navigation">
+ 		  <a class="main-header-logo">
+  		    <img src="#" width="" height="" alt="Логотип сайта Седона">
+  		      </a>
+  		  		<!-- ^^^ Маленький треугольный логотип вверху? -->
+  					<ul class="site-navigation">
+  						<li><a href="#">Информация</a></li>
+  						<li><a href="#">Фото и видео</a></li>
+  						<li><a href="#">Карта штата</a></li>
+  						<li><a href="#">Гостиницы</a></li>
+  					</ul>
+  		</nav>
+  		<h3>Седона – небольшой городок в Аризоне, заслуживающий большего!</h3>
+  	</header>
+  	<!-- -- -- M A I N -- -- -->
+  	<main class="container">
+  	<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+  		<section class="features">
+  			<h2 class="visually-hidden">Преимущества</h2>
+  				<ul class="features-list">
+  					<li class="feature-item">
+  						<h3>Настоящий городок</h3>
+  						<span>- №1 -</span>
+  						<span>Седона – не аттракцион для туристов, там течет своя жизнь</span>
+  					</li>
+  					<li class="feature-item">
+  						<h3>Там есть Мост Дьявола</h3>
+  						<span>- №2 -</span>
+  						<span>Да, но по нему можно пройти! Если конечно вы осмелитесь</span>
+  					</li>
+  					<li class="feature-item">
+  						<h3>Небольшая площадь</h3>
+  						<span>- №3 -</span>
+  						<span>Все достопримечательности находятся очень близко</span>
+  					</li>
+  					<li class="feature-item">
+  						<h3>Красивая дорога</h3>
+  						<span>- №4 -</span>
+  						<span>Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
+  					</li>
+  					<li class="feature-item">
+  						<h3>Мало туристов</h3>
+  						<span>- №5 -</span>
+  						<span>Большинство едет в Гранд Каньон и толпится там</span>
+  					</li>
+  				</ul>
+  		</section>
+  			<section class="benefits">
+  				<ul class="benefits-list">
+  					<li class="benefit-item">
+  						<h3>Жилье</h3>
+  						<span>Рекомендуем пожить в настоящем мотеле, как в кино!</span>
+  					</li>
+  					<li class="benefit-item">
+  						<h3>Еда</h3>
+  						<span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
+  					</li>
+  					<li class="benefit-item">
+  						<h3>Сувениры</h3>
+  						<span>Не только китайского, но и местного производства!</span>
+  					</li>
+  				</ul>
+  				<!-- Иконки домика, бургера и сувенира? -->
+  			</section>
+  				<img src="#" width="" height="" alt="Вид на город">
+  				<img src="#" width="" height="" alt="Мост Дьявола">
+  		<section class="interesting">
+  			<h2>Заинтересовались?</h2>
+  			<span>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</span>
+  		</section>
+  		<section class="map">
+  			<!-- Карта? -->
+  				<img src="#" width="" height="" alt="Карта">
+  		</section>
+  		<section class="hotel-search">
+  			<!-- Здесь будет форма -->
+  		</section>
+  	</main>
+  <!-- -- -- FOOTER -- -- -->
+  	<footer class="main-footer">
+  		<span class="footer-hashtag">
+  			<h3>#visitsedona</h3>
+  		</span>
+  		<div class="footer-social">
+  			<a href="#" class="social-button">Twitter</a>
+  			<a href="#" class="social-button">Facebook</a>
+  			<a href="#" class="social-button">YouTube</a>
+  		</div>
+  		<div class="footer-copyright">
+  			<p>Website by</p>
+  			<!-- Иконка студии? -->
+  			 <a href="https://htmlacademy.ru/intensive/htmlcss">
+  			  <img src="#" width="" height="" alt="Профессиональный HTML и CSS, уровень 1">
+  			 </a>
+  		</div>
+  	</footer>
   </body>
 </html>
