--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link rel="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="#" type="text/css">
   </head>
   <body>
   <!-- -- -- HEADER -- -- -->
@@ -11,7 +11,7 @@
   	  <h1 class="visually-hidden">Седона</h1>
   		<nav class="main-navigation">
  		  <a class="main-header-logo">
-  		    <img src="#" width="" height="" alt="Логотип сайта Седона">
+  		    <img src="#" width="138" height="70" alt="Логотип сайта Седона">
   		      </a>
   		  		<!-- ^^^ Маленький треугольный логотип вверху? -->
   					<ul class="site-navigation">
@@ -31,57 +31,60 @@
   				<ul class="features-list">
   					<li class="feature-item">
   						<h3>Настоящий городок</h3>
-  						<span>- №1 -</span>
-  						<span>Седона – не аттракцион для туристов, там течет своя жизнь</span>
+  						<p>- №1 -</p>
+  						<p>Седона – не аттракцион для туристов, там течет своя жизнь</p>
   					</li>
   					<li class="feature-item">
   						<h3>Там есть Мост Дьявола</h3>
-  						<span>- №2 -</span>
-  						<span>Да, но по нему можно пройти! Если конечно вы осмелитесь</span>
+  						<p>- №2 -</p>
+  						<p>Да, но по нему можно пройти! Если конечно вы осмелитесь</p>
   					</li>
   					<li class="feature-item">
   						<h3>Небольшая площадь</h3>
-  						<span>- №3 -</span>
-  						<span>Все достопримечательности находятся очень близко</span>
+  						<p>- №3 -</p>
+  						<p>Все достопримечательности находятся очень близко</p>
   					</li>
   					<li class="feature-item">
   						<h3>Красивая дорога</h3>
-  						<span>- №4 -</span>
-  						<span>Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
+  						<p>- №4 -</p>
+  						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
   					</li>
   					<li class="feature-item">
   						<h3>Мало туристов</h3>
-  						<span>- №5 -</span>
-  						<span>Большинство едет в Гранд Каньон и толпится там</span>
+  						<p>- №5 -</p>
+  						<p>Большинство едет в Гранд Каньон и толпится там</p>
   					</li>
   				</ul>
   		</section>
   			<section class="benefits">
   				<ul class="benefits-list">
   					<li class="benefit-item">
+  						<img src="#" width="75" height="72" alt="Домик">
   						<h3>Жилье</h3>
-  						<span>Рекомендуем пожить в настоящем мотеле, как в кино!</span>
+  						<p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
   					</li>
   					<li class="benefit-item">
+						<img src="#" width="74" height="70" alt="Бургер">
   						<h3>Еда</h3>
-  						<span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
+  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
   					</li>
   					<li class="benefit-item">
+  						<img src="#" width="64" height="76" alt="Сувенир">
   						<h3>Сувениры</h3>
-  						<span>Не только китайского, но и местного производства!</span>
+  						<p>Не только китайского, но и местного производства!</p>
   					</li>
   				</ul>
-  				<!-- Иконки домика, бургера и сувенира? -->
   			</section>
-  				<img src="#" width="" height="" alt="Вид на город">
-  				<img src="#" width="" height="" alt="Мост Дьявола">
+  			
+  				<img src="#" width="800" height="256" alt="Вид на город">
+  				<img src="#" width="800" height="256" alt="Мост Дьявола">
+  				
   		<section class="interesting">
   			<h2>Заинтересовались?</h2>
-  			<span>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</span>
+  			<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
   		</section>
   		<section class="map">
-  			<!-- Карта? -->
-  				<img src="#" width="" height="" alt="Карта">
+  				<img src="#" width="1718" height="748" alt="Карта">
   		</section>
   		<section class="hotel-search">
   			<!-- Здесь будет форма -->
@@ -89,21 +92,29 @@
   	</main>
   <!-- -- -- FOOTER -- -- -->
   	<footer class="main-footer">
-  		<span class="footer-hashtag">
+ 			<div class="footer-hashtag">
   			<h3>#visitsedona</h3>
-  		</span>
-  		<div class="footer-social">
-  			<a href="#" class="social-button">Twitter</a>
-  			<a href="#" class="social-button">Facebook</a>
-  			<a href="#" class="social-button">YouTube</a>
-  		</div>
+  			</div>
+  		<ul class="footer-social">
+			<li><a href="#" class="social-button">Twitter</a></li>
+			<li><a href="#" class="social-button">Facebook</a></li>
+			<li><a href="#" class="social-button">YouTube</a></li>
+  		</ul>
   		<div class="footer-copyright">
-  			<p>Website by</p>
-  			<!-- Иконка студии? -->
+  			<span>Website by</span>
   			 <a href="https://htmlacademy.ru/intensive/htmlcss">
-  			  <img src="#" width="" height="" alt="Профессиональный HTML и CSS, уровень 1">
+  			  <img src="#" width="115" height="41" alt="Профессиональный HTML и CSS, уровень 1">
   			 </a>
   		</div>
   	</footer>
   </body>
 </html>
+
+<!-- 
+Проверь страницы на валидацию. вот тут: https://validator.w3.org/nu/
+ 
+В описании к заданию говорится: Изображения вырезать не нужно — используйте вместо них заглушки, например: .
+
+Немного непонятна структура "features-list". Проверь, правильно ли сгруппированы элементы. Блоки должны идти в нормальном потоке документа (http://prntscr.com/imqr5m)
+
+-->
