--- a/hotels.html
+++ b/hotels.html
@@ -11,7 +11,7 @@
   	  <h1 class="visually-hidden">Гостиницы</h1>
   		<nav class="main-navigation">
  		  <a href="index.html" class="main-header-logo">
-  		    <img src="#" width="138" height="70" alt="Логотип сайта Седона">
+  		    <img src="http://placehold.it/138x70" width="138" height="70" alt="Логотип сайта Седона">
   		      </a>
   		  		<!-- ^^^ Маленький треугольный логотип вверху? -->
   					<ul class="site-navigation">
@@ -46,8 +46,8 @@
 	   		</ul> 
 	   		
 	   		<ul class="arrows">
-	   			<li><button><img src="#" alt="Вниз"></button></li>
-	   			<li><button><img src="#" alt="Вверх"></button></li>
+	   			<li><button><img src="http://placehold.it/11x10" width="11" height="10" alt="Вниз"></button></li>
+	   			<li><button><img src="http://placehold.it/11x10" width="11" height="10" alt="Вверх"></button></li>
 	   		</ul>
 	   </section>
 	   
@@ -57,15 +57,15 @@
 	    		<h3>Amara Resort &amp; Spa</h3>
 	    		<span>Гостиница</span>
 	    		<span>от 4000 р.</span>
-	    		<p class="hotel-item-image"><img src="#" width="135" height="90" alt="Amara Resort & Spa"></p>
+	    		<div class="hotel-item-image"><img src="http://placehold.it/135x90" width="135" height="90" alt="Amara Resort & Spa"></div>
 	    		<a href="#" class="button">Купить</a>
 	    		<a href="#" class="button">Подробнее</a>
 					<!-- Рейтинг, звездочки? -->
 					<ul>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
 					</ul>
 					<span>Рейтинг: 8,5</span>
 	    	</li>
@@ -74,14 +74,14 @@
 		   		<h3>Desert Quail Inn</h3>
 	    		<span>Мотель</span>
 	    		<span>от 3000 р.</span>
-	    		<p class="hotel-item-image"><img src="#" width="135" height="90" alt="Desert Quail Inn"></p>
+	    		<div class="hotel-item-image"><img src="http://placehold.it/135x90" width="135" height="90" alt="Desert Quail Inn"></div>
 	    		<a href="#" class="button">Купить</a>
 	    		<a href="#" class="button">Подробнее</a>
 					<!-- Рейтинг, звездочки? -->
 					<ul>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
 					</ul>
 					<span>Рейтинг: 8,9</span>
 		   </li>
@@ -91,13 +91,13 @@
 		   			   		<h3>Villas At Poco Diablo</h3>
 	    		<span>Апартаменты</span>
 	    		<span>от 2000 р.</span>
-	    		<p class="hotel-item-image"><img src="#" width="135" height="90" alt="Desert Quail Inn"></p>
+	    		<div class="hotel-item-image"><img src="http://placehold.it/135x90" width="135" height="90" alt="Desert Quail Inn"></div>
 	    		<a href="#" class="button">Купить</a>
 	    		<a href="#" class="button">Подробнее</a>
 					<!-- Рейтинг, звездочки? -->
 					<ul>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
-						<li><img src="#" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
+						<li><img src="http://placehold.it/18x17" width="18" height="17" alt="Звездочка"></li>
 					</ul>
 					<span>Рейтинг: 9,2</span>
 		   </li>
@@ -117,7 +117,7 @@
   		<div class="footer-copyright">
   			<span>Website by</span>
   			 <a href="https://htmlacademy.ru/intensive/htmlcss">
-  			  <img src="#" width="115" height="41" alt="Профессиональный HTML и CSS, уровень 1">
+  			  <img src="http://placehold.it/115x41" width="115" height="41" alt="Профессиональный HTML и CSS, уровень 1">
   			 </a>
   		</div>
   	 </footer>
