--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   
-<!------ HEADER ------>
+<!-- ===== HEADER ===== -->
   	<header class="main-header">
   	  <h1 class="visually-hidden">Седона</h1>
   		<nav class="main-navigation">
@@ -24,7 +24,7 @@
   	      <h3>Седона – небольшой городок в Аризоне, заслуживающий большего!</h3>
   	</header>
   	
-<!------ M A I N ------>
+<!-- ===== M A I N ===== -->
   	<main class="container">
   	  <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   	    <h2 class="visually-hidden">Преимущества</h2>
@@ -100,37 +100,37 @@
   	
   	<section class="hotel-search">
  	  
-<!---------- ФОРМА ---------->
+<!-- ===== ФОРМА ===== -->
   	
   	<h3>Поиск гостиницы в Седоне</h3>
   	
   	<form class="date" method="post" action="https://echo.htmlacademy.ru">
   	  <p>
   	  	<label for="date-checkin">Дата заезда:</label>
-  	  	<input id="date-checkin" type="text" name="date-checkin" placeholder="24 апреля 2017">
+  	  	<input id="date-checkin" type="text" name="date-checkin" value="" placeholder="24 апреля 2017">
   	  	<img src="img/calendar.svg" width="21" height="22" alt="Календарь">
   	  </p>
   	  <p>
   	  	<label for="date-checkout">Дата заезда:</label>
-  	  	<input id="date-checkout" type="text" name="date-checkin" placeholder="4 июля 2017">
+  	  	<input id="date-checkout" type="text" name="date-checkin" value="" placeholder="4 июля 2017">
   	  	<img src="img/calendar.svg" width="21" height="22" alt="Календарь">
   	  </p>
   	  <div class="number">
   	  	<label for="number-of-adults">Взрослые:</label>
-  	  	  <button name="minus-adult">-</button>
+  	  	  <button name="minus-adult" type="button">-</button>
   	  	    <input id="number-of-adults" type="text" name="number-of-adults" value="2">
-  	  	      <button name="plus-adult">+</button>
+  	  	      <button name="plus-adult" type="button">+</button>
   	  	<label for="number-of-children">Дети:</label>
-  	  	  <button name="minus-child">-</button>
+  	  	  <button name="minus-child" type="button">-</button>
   	  	    <input id="number-of-children" type="text" name="number-of-children" value="2">
-  	  	      <button name="plus-child">+</button>
+  	  	      <button name="plus-child" type="button">+</button>
   	  </div>
-  	  <button type="submit" name="find">Найти</button>
+  	  <button type="submit">Найти</button>
   	</form>  	
   	</section>
   	</main>
   	
-<!------ FOOTER ------>
+<!-- ===== FOOTER ===== -->
   	<footer class="main-footer">
  	  <div class="footer-hashtag">
   	    <h3>#visitsedona</h3>
