--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
   		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
   	</section>
   	<section class="map">
-  	  <img src="img/map.jpg" width="1718" height="748" alt="Седона на карте">
+ 	  <h2 class="visually-hidden">Седона на карте</h2>
+  	    <img src="img/map.jpg" width="1718" height="748" alt="Седона на карте">
   	</section>
   	
   	<section class="hotel-search">
