--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
       <title>Седона</title>
-        <link rel="stylesheet" href="#">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
   
@@ -18,7 +19,7 @@
   			  <li><a href="#">Информация</a></li>
   			  <li><a href="#">Фото и видео</a></li>
   			  <li><a href="#">Карта штата</a></li>
-  			  <li><a href="#">Гостиницы</a></li>
+  			  <li><a href="hotels.html">Гостиницы</a></li>
   			</ul>
   		</nav>
   	      <h3>Седона – небольшой городок в Аризоне, заслуживающий большего!</h3>
@@ -126,7 +127,7 @@
   	  	    <input id="number-of-children" type="text" name="number-of-children" value="2">
   	  	      <button name="plus-child" type="button">+</button>
   	  </div>
-  	  <button type="submit">Найти</button>
+  	  <button class="search" type="submit">Найти</button>
   	</form>  	
   	</section>
   	</main>
