--- a/hotels.html
+++ b/hotels.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
       <title>Седона > Гостиницы</title>
-        <link rel="stylesheet" href="#">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
   
@@ -24,7 +25,6 @@
 	</header>
   	   
 <!-- ===== M A I N ===== -->
-<!-- Размытое фото -->
 	<section class="filters">
     <h2 class="visually-hidden">Фильтры</h2>
 	  <form class="filter" method="get" action=https://echo.htmlacademy.ru>
@@ -46,7 +46,6 @@
 	      </ul>
     </fieldset>
 		
-	     
 	<fieldset>
 	  <legend>Тип жилья:</legend>
 	      <ul>
