--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
   	
   	<section class="hotel-search">
  	  
-<!-- ===== ФОРМА ===== -->
-  	
+<!-- ===== ФОРМА ===== -->	
   	<h3>Поиск гостиницы в Седоне</h3>
   	
   	<form class="date" method="post" action="https://echo.htmlacademy.ru">
@@ -119,15 +118,15 @@
   	  </p>
   	  <div class="number">
   	  	<label for="number-of-adults">Взрослые:</label>
-  	  	  <button name="minus-adult" type="button">-</button>
+  	  	  <button class="btn" name="minus-adult" type="button">-</button>
   	  	    <input id="number-of-adults" type="text" name="number-of-adults" value="2">
-  	  	      <button name="plus-adult" type="button">+</button>
+  	  	      <button class="btn" name="plus-adult" type="button">+</button>
   	  	<label for="number-of-children">Дети:</label>
-  	  	  <button name="minus-child" type="button">-</button>
-  	  	    <input id="number-of-children" type="text" name="number-of-children" value="2">
-  	  	      <button name="plus-child" type="button">+</button>
+  	  	  <button class="btn" name="minus-child" type="button">-</button>
+  	  	    <input id="number-of-children" type="text" name="number-of-children" value="0">
+  	  	      <button class="btn" name="plus-child" type="button">+</button>
   	  </div>
-  	  <button class="search" type="submit">Найти</button>
+  	  <button class="btn search" type="submit">Найти</button>
   	</form>  	
   	</section>
   	</main>
