--- a/hotels.html
+++ b/hotels.html
@@ -19,7 +19,7 @@
   			  <li><a href="#">Информация</a></li>
   			  <li><a href="#">Фото и видео</a></li>
   			  <li><a href="#">Карта штата</a></li>
-  			  <li class=site-navigation-current><a href="#">Гостиницы</a></li>
+  			  <li class="site-navigation-current"><a href="#">Гостиницы</a></li>
   			</ul>
   		</nav>
 	</header>
@@ -73,7 +73,7 @@
             </tr>
 		  </table>
 		    <input type="range" name="range" min="0" max="3000"> 
-		      <button type="submit">Показать</button>
+		      <button class="btn show" type="submit">Показать</button>
 	</fieldset>
     </form>
 	</section>
@@ -81,16 +81,16 @@
 	<section class="results-header">
 	  <h2 class="visually-hidden">Фильтры</h2>
 	    <h3>Найдено: </h3>
-	   	  <span>3</span>
-	   		<span>Сортировка: </span>
-	   		  <ul>
-	   		    <li><button>По цене</button></li>
-	   			<li><button>По типу</button></li>
-	   			<li><button>По рейтингу</button></li>
+	   	  <span class="results-number">3</span>
+	   		<span class="results-sort">Сортировка: </span>
+	   		  <ul class="results-sort-variants">
+	   		    <li><button class="btn pushed">По цене</button></li>
+	   			<li><button class="btn">По типу</button></li>
+	   			<li><button class="btn">По рейтингу</button></li>
 	   		  </ul> 
 	   		  <ul class="arrows">
-	   			<li><button type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Вниз"></button></li>
-	   			<li><button type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Вверх"></button></li>
+	   			<li><button class="btn" type="button"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Вниз"></button></li>
+	   			<li><button class="btn" type="button"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Вверх"></button></li>
 	   		  </ul>
 	</section>
 	   
@@ -103,8 +103,8 @@
 	    		<div class="hotel-item-image">
 	    		  <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
 	    		</div>
-	    		  <a href="#" class="button">Купить</a>
-	    		  <a href="#" class="button">Подробнее</a>
+	    		  <a href="#" class="button buy">Купить</a>
+	    		  <a href="#" class="button more">Подробнее</a>
 					<ul>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
@@ -121,8 +121,8 @@
 	    		<div class="hotel-item-image">
 	    		  <img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
 	    		</div>
-	    		  <a href="#" class="button">Купить</a>
-	    		  <a href="#" class="button">Подробнее</a>
+	    		  <a href="#" class="button buy">Купить</a>
+	    		  <a href="#" class="button more">Подробнее</a>
 					<ul>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
@@ -138,8 +138,8 @@
 	    		<div class="hotel-item-image">
 	    		  <img src="img/villas.jpg" width="135" height="90" alt="Desert Quail Inn">
 	    		</div>
-	    		  <a href="#" class="button">Купить</a>
-	    		  <a href="#" class="button">Подробнее</a>
+	    		  <a href="#" class="button buy">Купить</a>
+	    		  <a href="#" class="button more">Подробнее</a>
 					<ul>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
 					  <li><img src="img/star.svg" width="18" height="17" alt="Звездочка"></li>
