--- a/hotels.html
+++ b/hotels.html
@@ -31,7 +31,7 @@
 	  <form class="filter" method="get" action=https://echo.htmlacademy.ru>
     <fieldset>
 	  <legend>Инфраструктура:</legend>
-	      <ul>
+	      <ul class="filter-list">
 	        <li>
 	          <input class="visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
 	          <label for="filter-pool">Бассейн</label>
@@ -49,7 +49,7 @@
 		
 	<fieldset>
 	  <legend>Тип жилья:</legend>
-	      <ul>
+	      <ul class="filter-list">
 	        <li>
 	          <input class="visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
 	          <label for="filter-hotel">Гостиница</label>
@@ -80,18 +80,6 @@
           <button class="btn show" type="submit">Показать</button>
         </div>
     </div>
-     
-<!--	<fieldset>
-	  <legend>Стоимость в сутки (Р):</legend>
-	      <table>
-            <tr>
-              <td>От 0</td>
-              <td>До 3000</td>
-            </tr>
-		  </table>
-		    <input type="range" name="range" min="0" max="3000"> 
-		      <button class="btn show" type="submit">Показать</button>
-	</fieldset>-->
     </form>
 	</section>
 
