--- a/hotels.html
+++ b/hotels.html
@@ -27,40 +27,42 @@
       <section class="filters">
         <h2 class="title-2 visually-hidden">Фильтры</h2>
         <form class="filter" method="get" action=https://echo.htmlacademy.ru>
-          <fieldset>
-            <legend>Инфраструктура:</legend>
-            <ul class="filter-list">
-              <li>
-                <input class="visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
-                <label for="filter-pool">Бассейн</label>
-              </li>
-              <li>
-                <input class="visually-hidden" type="checkbox" name="parking" id="filter-parking">
-                <label for="filter-parking">Парковка</label>
-              </li>
-              <li>
-                <input class="visually-hidden" type="checkbox" name="wifi" id="filter-wifi">
-                <label for="filter-wifi">WI-FI</label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset>
-            <legend>Тип жилья:</legend>
-            <ul class="filter-list">
-              <li>
-                <input class="visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
-                <label for="filter-hotel">Гостиница</label>
-              </li>
-              <li>
-                <input class="visually-hidden" type="checkbox" name="motel" id="filter-motel" checked>
-                <label for="filter-motel">Мотель</label>
-              </li>
-              <li>
-                <input class="visually-hidden" type="checkbox" name="apartments" id="filter-apartments" checked>
-                <label for="filter-apartments">Апартаменты</label>
-              </li>
-            </ul>
-          </fieldset>
+          <div class="filters-left-column">
+            <fieldset>
+              <legend>Инфраструктура:</legend>
+              <ul class="filter-list">
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
+                  <label for="filter-pool">Бассейн</label>
+                </li>
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="parking" id="filter-parking">
+                  <label for="filter-parking">Парковка</label>
+                </li>
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="wifi" id="filter-wifi">
+                  <label for="filter-wifi">WI-FI</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Тип жилья:</legend>
+              <ul class="filter-list">
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <label for="filter-hotel">Гостиница</label>
+                </li>
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="motel" id="filter-motel" checked>
+                  <label for="filter-motel">Мотель</label>
+                </li>
+                <li>
+                  <input class="visually-hidden" type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <label for="filter-apartments">Апартаменты</label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
           <div class="filter-range">
             <div class="filter-range-title">Стоимость в сутки (Р):</div>
             <div class="price-controls">
@@ -109,11 +111,11 @@
                 <div class="hotel-item-card-columns">
                   <div class="hotel-item-card-column-1">
                     <span>Гостиница</span>
-                    <a href="#" class="button buy">Купить</a>
+                    <a href="#" class="button more">Подробнее</a>
                   </div>
                   <div class="hotel-item-card-column-2">
                     <span>от 4000 р.</span>
-                    <a href="#" class="button more">Подробнее</a>
+                    <a href="#" class="button book">Забронировать</a>
                   </div>
                 </div>
               </div>
@@ -144,11 +146,11 @@
                 <div class="hotel-item-card-columns">
                   <div class="hotel-item-card-column-1">
                     <span>Мотель</span>
-                    <a href="#" class="button buy">Купить</a>
+                    <a href="#" class="button more">Подробнее</a>
                   </div>
                   <div class="hotel-item-card-column-2">
                     <span>от 3000 р.</span>
-                    <a href="#" class="button more">Подробнее</a>
+                    <a href="#" class="button book">Забронировать</a>
                   </div>
                 </div>
               </div>
@@ -178,11 +180,11 @@
                 <div class="hotel-item-card-columns">
                   <div class="hotel-item-card-column-1">
                     <span>Апартаменты</span>
-                    <a href="#" class="button buy">Купить</a>
+                    <a href="#" class="button more">Подробнее</a>
                   </div>
                   <div class="hotel-item-card-column-2">
                     <span>от 2000 р.</span>
-                    <a href="#" class="button more">Подробнее</a>
+                    <a href="#" class="button book">Забронировать</a>
                   </div>
                 </div>
               </div>
