--- a/index.html
+++ b/index.html
@@ -113,14 +113,18 @@
                   </div>
                 </div>
                 <div class="number">
-                  <label for="number-of-adults">Взрослые:</label>
-                  <button class="btn" name="minus-adult" type="button">-</button>
-                  <input class="adults" id="number-of-adults" type="text" name="number-of-adults" value="2">
-                  <button class="btn" name="plus-adult" type="button">+</button>
-                  <label for="number-of-children">Дети:</label>
-                  <button class="btn" name="minus-child" type="button">-</button>
-                  <input class="children" id="number-of-children" type="text" name="number-of-children" value="0">
-                  <button class="btn" name="plus-child" type="button">+</button>
+                  <div class=adults-group>
+                    <label for="number-of-adults">Взрослые:</label>
+                    <button class="btn" name="minus-adult" type="button">-</button>
+                    <input class="adults" id="number-of-adults" type="text" name="number-of-adults" value="2">
+                    <button class="btn" name="plus-adult" type="button">+</button>
+                  </div>
+                  <div class="children-group">
+                    <label for="number-of-children">Дети:</label>
+                    <button class="btn" name="minus-child" type="button">-</button>
+                    <input class="children" id="number-of-children" type="text" name="number-of-children" value="0">
+                    <button class="btn" name="plus-child" type="button">+</button>
+                  </div>
                 </div>
                 <button class="btn search" type="submit">Найти</button>
               </form>
