--- a/hotels.html
+++ b/hotels.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Седона > Гостиницы</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div class="wrapper">
@@ -204,7 +204,7 @@
         </ul>
       </section>
       <!-- ===== FOOTER ===== -->
-      <footer class="main-footer">
+      <footer class="main-footer footer-hotels">
         <div class="footer-hashtag">
           <h3 class="title-3">#visitsedona</h3>
         </div>
