--- a/hotels.html
+++ b/hotels.html
@@ -215,7 +215,7 @@
         </ul>
         <div class="footer-copyright">
           <span class="by">Website by</span>
-          <a href="https://htmlacademy.ru/intensive/htmlcss" area-label="HTML Academy">
+          <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="HTML Academy">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Профессиональный HTML и CSS, уровень 1">
           </a>
         </div>
